# visual_graph_datasets

./: .gitignore  CLAUDE.md  HISTORY.rst  README.rst  llms.txt  noxfile.py  pyproject.toml
tests/: test_config.py  test_data.py  test_generation_colors.py  test_graph.py  test_inspect.py  test_processing_base.py  test_processing_colors.py  test_processing_generic.py  test_processing_molecules.py  test_testing.py  test_util.py  test_visualization_base.py  test_visualization_colors.py  test_visualization_importances.py  test_visualization_molecules.py  test_web.py  util.py
tests/assets/: g_color.json  test.yaml
tests/assets/mock/: .meta.yaml
tests/assets/mock_dual/.elements/: 1.json  2.json  3.json  4.json
tests/assets/mock_dual/000000_chunk_10/: 0000000.json  0000001.json  0000002.json  0000003.json  0000004.json  0000005.json  0000006.json  0000007.json  0000008.json  0000009.json
tests/assets/mock_dual/000001_chunk_10/: 0000010.json  0000011.json  0000012.json  0000013.json  0000014.json  0000015.json  0000016.json  0000017.json  0000018.json  0000019.json
tests/assets/mock_dual/000002_chunk_10/: 0000020.json  0000021.json  0000022.json  0000023.json  0000024.json  0000025.json  0000026.json  0000027.json  0000028.json  0000029.json
tests/assets/mock_dual/000003_chunk_10/: 0000030.json  0000031.json  0000032.json  0000033.json  0000034.json  0000035.json  0000036.json  0000037.json  0000038.json  0000039.json
tests/assets/mock_dual/000004_chunk_10/: 0000040.json  0000041.json  0000042.json  0000043.json  0000044.json  0000045.json  0000046.json  0000047.json  0000048.json  0000049.json
tests/assets/mock_dual/000005_chunk_10/: 0000050.json  0000051.json  0000052.json  0000053.json  0000054.json  0000055.json  0000056.json  0000057.json  0000058.json  0000059.json
tests/assets/mock_dual/000006_chunk_10/: 0000060.json  0000061.json  0000062.json  0000063.json  0000064.json  0000065.json  0000066.json  0000067.json  0000068.json  0000069.json
tests/assets/mock_dual/000007_chunk_10/: 0000070.json  0000071.json  0000072.json  0000073.json  0000074.json  0000075.json  0000076.json  0000077.json  0000078.json  0000079.json
tests/assets/mock_dual/000008_chunk_10/: 0000080.json  0000081.json  0000082.json  0000083.json  0000084.json  0000085.json  0000086.json  0000087.json  0000088.json  0000089.json
tests/assets/mock_dual/000009_chunk_10/: 0000090.json  0000091.json  0000092.json  0000093.json  0000094.json  0000095.json  0000096.json  0000097.json  0000098.json  0000099.json
tests/assets/mock_expansion/: 0.json  1.json  5.json
tests/assets/mock_multi/: 000000_chunk_10.json  000001_chunk_10.json  000002_chunk_10.json  000003_chunk_10.json  000004_chunk_10.json  000005_chunk_10.json  000006_chunk_10.json  000007_chunk_10.json  000008_chunk_10.json  000009_chunk_10.json
tests/assets/mock_multi/.elements/: 0.json  1.json  2.json  3.json  4.json
visual_graph_datasets/: __init__.py  cli.py  config.py  data.py  graph.py  models.py  testing.py  typing.py  util.py  web.py
visual_graph_datasets/examples/: 00_quickstart.py  01_explanation_pdf.py  README.rst
visual_graph_datasets/experiments/: README.rst  analyze_color_graph_dataset.py  analyze_color_graph_dataset__rgb_dual_motifs.py  csv_ames_mutagenicity.py  csv_gao_bbbp_dataset.py  csv_pereira_dipole_moment.py  csv_sanchez_lengeling_dataset.py  filter_zinc_for_synth2.py  generate_molecule_dataset_from_csv.py  generate_molecule_dataset_from_csv__aggregators_binary.py  generate_molecule_dataset_from_csv__aggregators_binary_protonated.py  generate_molecule_dataset_from_csv__aggregators_lee.py  generate_molecule_dataset_from_csv__ampc_combined.py  generate_molecule_dataset_from_csv__aqsoldb.py  generate_molecule_dataset_from_csv__bbbp.py  generate_molecule_dataset_from_csv__binary_global.py  generate_molecule_dataset_from_csv__binary_local.py  generate_molecule_dataset_from_csv__compas.py  generate_molecule_dataset_from_csv__dipole_moment.py  generate_molecule_dataset_from_csv__fia_49k.py  generate_molecule_dataset_from_csv__lipophilicity.py  generate_molecule_dataset_from_csv__logp.py  generate_molecule_dataset_from_csv__mutagenicity.py  generate_molecule_dataset_from_csv__qm9.py  generate_molecule_dataset_from_csv__qm9sub.py  generate_molecule_dataset_from_csv__smarts_binary_1.py  generate_molecule_dataset_from_csv__synth.py  generate_molecule_dataset_from_csv__synth2.py  generate_molecule_dataset_from_csv__tadf.py  generate_molecule_dataset_from_csv_aggregators_binary.py  generate_molecule_dataset_from_csv_aqsoldb.py  generate_molecule_dataset_from_csv_bbbp.py  generate_molecule_dataset_from_csv_dipole_moment.py  generate_molecule_dataset_from_csv_mutagenicity_exp.py  generate_molecule_dataset_from_csv_qm9.py  generate_molecule_dataset_from_csv_tadf.py  generate_molecule_dataset_rmd17.py  generate_rb_adv_motifs.py  generate_rb_dual_motifs.py  generate_rgb_dual_motifs.py  (+6 more)
visual_graph_datasets/experiments/assets/: bbbp.csv  dipole_moment.csv  mutagenicity.csv  synth2_subset.csv
visual_graph_datasets/generation/: colors.py  graph.py
visual_graph_datasets/processing/: __init__.py  base.py  colors.py  generic.py  molecules.py
visual_graph_datasets/templates/: list.out.j2  process.py.j2
visual_graph_datasets/visualization/: __init__.py  base.py  colors.py  importances.py  molecules.py
