[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# --- project metadata ---
name = "visual_graph_datasets"
version = "0.17.0"
description = "Datasets for the training of graph neural networks (GNNs) and subsequent visualization of attributional explanations of XAI methods"
readme = "README.rst"
authors = [
    { name = "Jonas Teufel", email = "jonseb1998@gmail.com" },
]
maintainers = [
    { name = "Jonas Teufel", email = "jonseb1998@gmail.com" },
]
license = { text = "MIT License" }
keywords = [
    "graph neural networks",
    "datasets",
    "explainable AI",
    "machine learning",
    "visualization",
    "GNN",
    "XAI",
    "molecular",
    "networkx",
    "rdkit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8,<=3.14"

# --- project dependencies ---
dependencies = [
    "poetry-bumpversion>=0.3.0",
    "rich_click>=1.8.3",
    "jinja2>=3.0.3",
    "numpy>=1.22.0,<2.0.0",
    "matplotlib>=3.5.3",
    "psutil>=5.7.2",
    "pytest>=7.2.0",
    "orjson>=3.8.0",
    "pyyaml>=0.6.0",
    "pycomex>=0.14.0",
    "networkx>=2.8.8",
    "scipy>=1.10.1",
    "imageio>=2.22.4",
    "cairosvg>=2.5.0",
    "rdkit>=2022.9.0",
    "parsimonious>=0.10.0"
]

# --- executable scripts ---
[project.scripts]
vgd = "visual_graph_datasets.cli:cli"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["visual_graph_datasets"]

# --- Ruff configuration ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "COM812",  # Missing trailing comma (enforces trailing commas)
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

# --- bumpversion configuration ---
[tool.bumpversion]
current_version = "0.17.0"
parse = "(?<![=<>])(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = true
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
files = [
    { filename = "pyproject.toml", search = "version = \"{current_version}\"", replace = "version = \"{new_version}\"" },
    { filename = "README.rst" },
    { filename = "visual_graph_datasets/VERSION" },
]